src/test/compile-fail/once-fn-subtyping.rs
fn main() {
    let f: &fn() = ||();
    let g: &once fn() = f;  //~ ERROR mismatched types
}

